add min resolution style

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                     </a>
                 </div>
                 <div class="flex header-right-div">
-                    <a class="uppercase"href="">go pro!</a>
-                    <div class="flex colum-reset">
+                    <a class="uppercase display-none360"href="">go pro!</a>
+                    <div class="flex colum-reset display-none360">
                         <div class="relative">
                             <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
                         </div>
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <a href="sec-page.html"><img src="images/persons/Group 33.png" alt="photo"> </a>
-                    <button class="uppercase upload colorfff font-size14 font-fam-heavy">upload</button>
+                    <button class="display-none360 uppercase upload colorfff font-size14 font-fam-heavy">upload</button>
                 </div>
             </header>
             <main>
