--- a/sec-page.html
+++ b/sec-page.html
@@ -95,8 +95,8 @@
                     </a>
                 </div>
                 <div class="flex header-right-div">
-                    <a class="uppercase"href="">go pro!</a>
-                    <div class="flex colum-reset">
+                    <a class="uppercase display-none360"href="">go pro!</a>
+                    <div class="flex colum-reset display-none360">
                         <div class="relative">
                             <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
                         </div>
@@ -107,7 +107,7 @@
                     <div class="div-person flex">
                        <a href="index.html"><img src="images/icons/Group 79.png" alt="photo"> </a>
                     </div>
-                    <button class="uppercase upload">upload</button>
+                    <button class="uppercase upload display-none360">upload</button>
                 </div>
             </header>
             <main>
@@ -123,14 +123,14 @@
                                 <th>Total</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr class="info-table flex">
-                                <td>2020-09-29 95:57</td>
-                                <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
-                                <td>$ 999.00</td>
-                                <td>1</td>
-                                <td>$ 999.00</td>
+                        <tbody class="flex-resp">
+                            <tr class="flex info-table-title-resp">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
                             </tr>
                             <tr class="info-table flex">
                                 <td>2020-09-29 95:57</td>
@@ -140,13 +140,13 @@
                                 <td>1</td>
                                 <td>$ 999.00</td>
                             </tr>
-                            <tr class="info-table flex">
-                                <td>2020-09-29 95:57</td>
-                                <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
-                                <td>$ 999.00</td>
-                                <td>1</td>
-                                <td>$ 999.00</td>
+                            <tr class="flex info-table-title-resp">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
                             </tr>
                             <tr class="info-table flex">
                                 <td>2020-09-29 95:57</td>
@@ -156,13 +156,13 @@
                                 <td>1</td>
                                 <td>$ 999.00</td>
                             </tr>
-                            <tr class="info-table flex">
-                                <td>2020-09-29 95:57</td>
-                                <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
-                                <td>$ 999.00</td>
-                                <td>1</td>
-                                <td>$ 999.00</td>
+                            <tr class="flex info-table-title-resp">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
                             </tr>
                             <tr class="info-table flex">
                                 <td>2020-09-29 95:57</td>
@@ -172,13 +172,13 @@
                                 <td>1</td>
                                 <td>$ 999.00</td>
                             </tr>
-                            <tr class="info-table flex">
-                                <td>2020-09-29 95:57</td>
-                                <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
-                                <td>$ 999.00</td>
-                                <td>1</td>
-                                <td>$ 999.00</td>
+                            <tr class="flex info-table-title-resp">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
                             </tr>
                             <tr class="info-table flex">
                                 <td>2020-09-29 95:57</td>
@@ -187,6 +187,78 @@
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                            </tr>
+                            <tr class="flex info-table-title-resp">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="flex info-table-title-resp">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="flex info-table-title-resp">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="flex info-table-title-resp">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="flex info-table-title-resp">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
                             </tr>
                             <tr class="info-table flex">
                                 <td>2020-09-29 95:57</td>
