--- a/index.html
+++ b/index.html
@@ -79,30 +79,32 @@
             </div>
         </aside>
         <div class="main-page">
-            <header class="flex">
-                <div class="search-div flex">
-                    <input type="text" placeholder="Search inspiration">
-                    <a href="#">
-                        <img src="images/icons/search.png" alt="search">
-                    </a>
-                </div>
-                <div class="flex header-right-div">
-                    <a class="uppercase display-none360"href="">go pro!</a>
-                    <div class="flex colum-reset display-none360">
-                        <div class="relative">
-                            <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
-                        </div>
-                        <div class="relative">
-                            <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
-                        </div>
+            <header>
+                <div class="container flex">
+                    <div class="search-div flex">
+                        <input type="text" placeholder="Search inspiration">
+                        <a href="#">
+                            <img src="images/icons/search.png" alt="search">
+                        </a>
                     </div>
-                    <a href="sec-page.html"><img src="images/persons/Group 33.png" alt="photo"> </a>
-                    <button class="display-none360 uppercase upload colorfff font-size14 font-fam-heavy">upload</button>
+                    <div class="flex header-right-div">
+                        <a class="uppercase display-none360"href="">go pro!</a>
+                        <div class="flex colum-reset display-none360">
+                            <div class="relative">
+                                <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
+                            </div>
+                            <div class="relative">
+                                <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
+                            </div>
+                        </div>
+                        <a href="sec-page.html"><img src="images/persons/Group 33.png" alt="photo"> </a>
+                        <button class="display-none360 uppercase upload colorfff font-size14 font-fam-heavy">upload</button>
+                    </div>
                 </div>
             </header>
             <main>
-                <section class="container">
-                    <div class="flex jc-between ai-center wrap"> 
+                <section>
+                    <div class=" container flex jc-between ai-center wrap"> 
                         <div class="flex display-none">
                             <div class="list-div">
                                 <a class="book-size16-color222 capitalize"href="#">all</a>
