--- a/sec-page.html
+++ b/sec-page.html
@@ -87,27 +87,29 @@
             </div>
         </aside>
         <div class="main-page">
-            <header class="flex">
-                <div class="search-div flex">
-                    <input type="text" placeholder="Search inspiration">
-                    <a href="#">
-                        <img src="images/icons/search.png" alt="search">
-                    </a>
-                </div>
-                <div class="flex header-right-div">
-                    <a class="uppercase display-none360"href="">go pro!</a>
-                    <div class="flex colum-reset display-none360">
-                        <div class="relative">
-                            <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
-                        </div>
-                        <div class="relative">
-                            <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
-                        </div>
+            <header>
+                <div class="container flex">
+                    <div class="search-div flex">
+                        <input type="text" placeholder="Search inspiration">
+                        <a href="#">
+                            <img src="images/icons/search.png" alt="search">
+                        </a>
                     </div>
-                    <div class="div-person flex">
-                       <a href="index.html"><img src="images/icons/Group 79.png" alt="photo"> </a>
+                    <div class="flex header-right-div">
+                        <a class="uppercase display-none360"href="">go pro!</a>
+                        <div class="flex colum-reset display-none360">
+                            <div class="relative">
+                                <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
+                            </div>
+                            <div class="relative">
+                                <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
+                            </div>
+                        </div>
+                        <div class="div-person flex">
+                           <a href="index.html"><img src="images/icons/Group 79.png" alt="photo"> </a>
+                        </div>
+                        <button class="uppercase upload display-none360">upload</button>
                     </div>
-                    <button class="uppercase upload display-none360">upload</button>
                 </div>
             </header>
             <main>
