--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </aside>
         <div class="main-page">
             <header>
-                <div class="container flex">
+                <div class="flex container">
                     <div class="search-div flex">
                         <input type="text" placeholder="Search inspiration">
                         <a href="#">
@@ -97,6 +97,11 @@
                                 <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
                             </div>
                         </div>
+                        <div class="burger-div">
+                            <div></div>
+                            <div></div>
+                            <div></div>        
+                       </div>
                         <a href="sec-page.html"><img src="images/persons/Group 33.png" alt="photo"> </a>
                         <button class="display-none360 uppercase upload colorfff font-size14 font-fam-heavy">upload</button>
                     </div>
