--- a/sec-page.html
+++ b/sec-page.html
@@ -105,8 +105,13 @@
                                 <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
                             </div>
                         </div>
+                        <div class="burger-div">
+                            <div></div>
+                            <div></div>
+                            <div></div>        
+                       </div>
                         <div class="div-person flex">
-                           <a href="index.html"><img src="images/icons/Group 79.png" alt="photo"> </a>
+                            <a href="index.html"><img src="images/icons/Group 79.png" alt="photo"> </a>
                         </div>
                         <button class="uppercase upload display-none360">upload</button>
                     </div>
