--- a/sec-page.html
+++ b/sec-page.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="page-design">
     <meta name="keywords" content="design, 3D, app designe, ilustration, animation,typography">
-    <meta name="author" content="james bond">
+    <meta name="author" content="mari kakuchaia">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url"content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
-    <meta property="og:type"content="article" />
-    <meta property="og:title"content="When Great Minds Don’t Think Alike" />
-    <meta property="og:description"content="How much does culture influence creative thinking?" />
-    <meta property="og:image"content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+    <meta property="og:url"content="https://marikakuchaia.github.io/midterm-exam/" />
+    <meta property="og:type"content="Design" />
+    <meta property="og:title"content="Design.today" />
+    <meta property="og:description"content="Choose and get the desired design" />
+    <meta property="og:image"content="images/basic images/dark mockup.png" />
     <link rel="stylesheet" href="styles/font.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
