--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="page-design">
+    <meta name="keywords" content="design, 3D, app designe, ilustration, animation,typography">
+    <meta name="author" content="mari kakuchaia">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url"content="https://marikakuchaia.github.io/midterm-exam/" />
+    <meta property="og:type"content="Design" />
+    <meta property="og:title"content="Design.today" />
+    <meta property="og:description"content="Choose and get the desired design" />
+    <meta property="og:image"content="images/basic images/dark mockup.png" />
     <link rel="stylesheet" href="styles/font.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
